Made service instance and worker count configurable